--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "firebase-admin": "^13.6.1",
     "vite": "^7.3.1"
   },
   "dependencies": {
