--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "zero-clothing",
+  "name": "trico-style",
   "private": true,
   "version": "1.0.0",
   "type": "module",
@@ -10,5 +10,8 @@
   },
   "devDependencies": {
     "vite": "^7.3.1"
+  },
+  "dependencies": {
+    "firebase": "^11.0.0"
   }
 }
